<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <POU Name="FB_OERLIKON_TD400_TO_PTM" Id="{baf7e8bc-1486-4fb9-99c8-79be208378ac}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_OERLIKON_TD400_TO_PTM
VAR_IN_OUT
	iq_stPTM: ST_LeyboldPTM;
	iq_stTD400Status: ST_TD400Status;
    iq_stTD400Control: ST_TD400Control;
END_VAR
VAR
	nOldSetSetpointFreq_P24: WORD;
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[(* This function block is used to map the IO points from the Oerlikon TD400 structures
to the generic turbo structures *)
//Use this function to map IO as a temporary solution if we don't change method FB_PTM_TurboDrive.M_Serial_IO and ST_LeyboldPTM structure

(* Readbacks *)
iq_stPTM.i_xAccel := iq_stTD400Status.wStatusWord.4;
iq_stPTM.i_xDecel := iq_stTD400Status.wStatusWord.5;
//iq_stPTM.i_xAtSpd := iq_stTD400Status.wStatusWord.10;
iq_stPTM.q_xRemote := iq_stTD400Status.wStatusWord.15; (* Remote control enabled *)
iq_stPTM.i_diCurSpd := WORD_TO_DINT(iq_stTD400Status.wFrequency_P3);
iq_stPTM.i_rCurrentMon := WORD_TO_INT(iq_stTD400Status.wMotorCurrent_P5);
iq_stPTM.i_diPwr := WORD_TO_DINT(iq_stTD400Status.wMotorCurrent_P5 * iq_stTD400Status.wVoltage_P4);
iq_stPTM.i_diElecTemp := WORD_TO_DINT(iq_stTD400Status.wConverterTemp_P11);
iq_stPTM.i_rTempMon := WORD_TO_INT(iq_stTD400Status.wPumpTemp_P127);

(* Faults and warnings *)
//iq_stPTM.xFault := iq_stTD400Status.wStatusWord.3;
iq_stPTM.i_xTempFault := iq_stTD400Status.wStatusWord.7; (* specified as a temperature warning but it could be a fault *)
iq_stPTM.i_xWarn := iq_stTD400Status.wStatusWord.14; (* warning summary bit *)

(* Controls *)
IF iq_stTD400Status.wMinSetpointFreq_P19 = 0 AND iq_stTD400Status.wMaxSetpointFreq_P18 = 0 THEN //IF both values 0, pump disconnected from controller, do not send new value
    iq_stTD400Control.wSetSetpointFreq_P24 := nOldSetSetpointFreq_P24;
ELSE
    iq_stTD400Control.wSetSetpointFreq_P24 := LIMIT (iq_stTD400Status.wMinSetpointFreq_P19, iq_stTD400Control.wSetSetpointFreq_P24, iq_stTD400Status.wMaxSetpointFreq_P18);
END_IF
nOldSetSetpointFreq_P24 := iq_stTD400Control.wSetSetpointFreq_P24;
]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>